--- a/sitrep.Rmd
+++ b/sitrep.Rmd
@@ -1,2 +1,5 @@
 Comparison of attack rates in different age groups
 
+This can identify priority groups of interventions
+Maps illustrate the spread and impact of outbreak
+
